<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/back2"
        tools:context=".Dashboard">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <View
                    android:id="@+id/background"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_160sdp"
                    android:background="@color/purple_200"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/letsGo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/rubik_light"
                    android:text="@string/let_s_go"
                    android:textColor="@color/white"
                    android:textSize="49dp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/describtion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:fontFamily="@font/rubik_light"
                    android:text="@string/tracking_bus_system"
                    android:textColor="@color/white"
                    android:textSize="22dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/letsGo" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:backgroundTint="@color/background_color"
                    app:cardBackgroundColor="@color/white"

                    app:cardCornerRadius="@dimen/_16sdp"
                    app:cardElevation="@dimen/_20sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/describtion">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_14sdp">

                        <LinearLayout
                            android:id="@+id/total_students"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@id/attendence"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <ImageView
                                android:layout_width="@dimen/_28sdp"
                                android:layout_height="@dimen/_28sdp"
                                android:src="@drawable/total_students"
                                app:tint="@color/white" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/_4sdp"
                                android:fontFamily="@font/rubik_light"
                                android:text="@string/total_students"
                                android:textColor="@color/purple_200"
                                android:textSize="@dimen/_9sdp" />

                            <TextView
                                android:id="@+id/total_childs"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/_4sdp"
                                android:fontFamily="@font/rubik_light"
                                android:text="60"
                                android:textColor="@color/white"
                                android:textSize="@dimen/_9sdp"
                                android:textStyle="bold" />
                        </LinearLayout>


                        <LinearLayout

                            android:id="@+id/attendence"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical"
                            app:layout_constraintBottom_toBottomOf="@id/total_students"
                            app:layout_constraintEnd_toStartOf="@id/check_point"
                            app:layout_constraintStart_toEndOf="@id/total_students"
                            app:layout_constraintTop_toTopOf="@id/total_students">

                            <ImageView
                                android:layout_width="@dimen/_28sdp"
                                android:layout_height="@dimen/_28sdp"
                                android:src="@drawable/attendence3"
                                app:tint="@color/white" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/_4sdp"
                                android:fontFamily="@font/rubik_light"
                                android:text="@string/student_attendence"
                                android:textColor="@color/purple_200"
                                android:textSize="@dimen/_9sdp" />

                            <TextView
                                android:id="@+id/attendance_childs"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/_4sdp"
                                android:fontFamily="@font/rubik_light"
                                android:text="45"
                                android:textColor="@color/white"
                                android:textSize="@dimen/_9sdp"
                                android:textStyle="bold" />
                        </LinearLayout>


                        <LinearLayout
                            android:id="@+id/check_point"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical"
                            app:layout_constraintBottom_toBottomOf="@id/total_students"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/attendence"
                            app:layout_constraintTop_toTopOf="@id/total_students">

                            <ImageView
                                android:layout_width="@dimen/_28sdp"
                                android:layout_height="@dimen/_28sdp"
                                android:src="@drawable/school2"
                                app:tint="@color/white" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/_4sdp"
                                android:fontFamily="@font/rubik_light"
                                android:text="@string/school_name"
                                android:textColor="@color/purple_200"
                                android:textSize="@dimen/_9sdp" />

                            <TextView
                                android:id="@+id/school_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/_4sdp"
                                android:fontFamily="@font/rubik_light"
                                android:text="elagouza"
                                android:textColor="@color/white"
                                android:textSize="@dimen/_9sdp"
                                android:textStyle="bold" />
                        </LinearLayout>


                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/_14sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/header">

                    <include
                        android:id="@+id/StartNavigate"
                        layout="@layout/dashboard_item_1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="@dimen/_20sdp" />

                    <include
                        android:id="@+id/NavigateBack"
                        layout="@layout/dashboard_item_2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="@dimen/_20sdp" />



                    <include
                        android:id="@+id/students_attendance"
                        layout="@layout/dashboard_item_4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="@dimen/_20sdp" />

                    <include
                        android:id="@+id/my_profile"
                        layout="@layout/dashboard_item_5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="@dimen/_20sdp" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>